--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ edition = "2018"
 regex = "1.1.0"
 multiarray = "0.1.3"
 
+[lib]
+name = "common"
+path = "src/common.rs"
+
 [[bin]]
 name = "day1"
 path = "src/day1.rs"
