--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,5 +37,9 @@ name = "day6"
 path = "src/day6.rs"
 
 [[bin]]
+name = "day7"
+path = "src/day7.rs"
+
+[[bin]]
 name = "day11"
 path = "src/day11.rs"
