--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,5 +41,9 @@ name = "day7"
 path = "src/day7.rs"
 
 [[bin]]
+name = "day8"
+path = "src/day8.rs"
+
+[[bin]]
 name = "day11"
 path = "src/day11.rs"
